--- a/2020_10_09/style.css
+++ b/2020_10_09/style.css
@@ -3,3 +3,12 @@
     text-decoration: none;
     color: black
 }
+#timeOut
+{   
+    text-align: center;
+    height: 200px;
+    width: 300px;
+    background-color: black;
+    padding: 20px;
+    color: aqua;
+}
