--- a/2020_10_09/style.css
+++ b/2020_10_09/style.css
@@ -4,11 +4,13 @@
     color: black
 }
 #timeOut
-{   
-    text-align: center;
-    height: 200px;
-    width: 300px;
-    background-color: black;
+{
+    position: relative;
+    top: -10px;
+    right: 2.5%;
+    height: 10px;
+    width: 80px;
     padding: 20px;
-    color: aqua;
+    font-size: 1.25rem;
+    color: black;
 }
