--- a/2020_10_09/style.css
+++ b/2020_10_09/style.css
@@ -1,7 +1,26 @@
+html {
+    --scrollbarBG: #f8f9fa;
+    --thumbBG: rgba(0,0,0,.9);
+  }
+  body::-webkit-scrollbar {
+    width: 11px;
+  }
+  body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  }
+  body::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG) ;
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBG);
+  }
 .menu ul li a
 {
     text-decoration: none;
-    color: black
+    color: rgba(0,0,0,.9)
 }
 #timeOut
 {
@@ -12,5 +31,5 @@
     width: 80px;
     padding: 20px;
     font-size: 1.25rem;
-    color: black;
+    color: rgba(0,0,0,.9);
 }
