--- a/2020_10_09/style.css
+++ b/2020_10_09/style.css
@@ -17,10 +17,28 @@ html {
     border-radius: 6px;
     border: 3px solid var(--scrollbarBG);
   }
-.menu ul li a
-{
+.menu ul li a {
     text-decoration: none;
-    color: rgba(0,0,0,.9)
+    color: rgba(0,0,0,.9);
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+}
+li a:hover 
+{
+    background-color: grey;
+}
+li 
+{
+    border-left: 1px solid #bbb;
+}
+li:last-child 
+{
+    border-right: 1px solid #bbb;
+}
+.nav-item active 
+{
+    color: #4CAF50;
 }
 #timeOut
 {
@@ -36,5 +54,4 @@ html {
 footer
 {
     text-align: center;
-    color: red;
 }
