NEM TUDOM MI TÖRTÉNIK

--- a/2020_10_09/Test.css
+++ b/2020_10_09/Test.css
@@ -101,13 +101,16 @@ section
   width: 20%;
   float: right;
 }
+#viruspopup
+{
+  cursor: pointer;
+}
 .viruspopup
 {
   visibility: hidden;
 }
-#viruspopup:hover .viruspopup
-{
-  visibility: visible;
-}
+
+
+
 #HDDpopup{}
 #SSDpopup{}
