--- a/2020_10_09/style.css
+++ b/2020_10_09/style.css
@@ -98,3 +98,24 @@ section
   background: rgba(255, 255, 255, 0.7);
   font-weight: bold;
 }
+
+table
+{
+  width: 1150px;
+  border: solid 1px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  box-sizing: border-box;
+  display: table;
+  line-height: 29.7px;
+  overflow-wrap: break-word;
+  text-size-adjust: 100%;
+  background-color: white;
+}
+
+th, td
+{
+  padding: 15px;
+  text-align: left;
+  border: 1px solid rgb(85, 85, 85);
+}
